@@ -3,12 +3,7 @@
 
 # Available levels are DEBUG, INFO, WARN, ERROR, FATAL
 log4j.rootCategory=DEBUG, A1, A2
-#log4j.rootCategory=WARN, A1
-#log4j.rootCategory=DEBUG, A2
 
-#log4j.logger.org.bbop = DEBUG
-#log4j.logger.org.obo = DEBUG
-#log4j.logger.org.oboedit = DEBUG
 log4j.logger.org.apache.axis = ERROR
 log4j.logger.org.apache.axis2 = ERROR
 log4j.logger.org.apache.axiom = ERROR
@@ -24,8 +19,7 @@ log4j.appender.A1.layout.ConversionPattern= %m%n
 #
 # A2 is a RollingFileAppender
 log4j.appender.A2=org.apache.log4j.RollingFileAppender
-log4j.appender.A2.file=${user.home}/.obo-edit2-rc/log/oboedit.log
-log4j.appender.A2.datePattern='.'yyyy-MM-dd
+log4j.appender.A2.file=${user.home}/.obo-edit2/log/oboedit2.log
 log4j.appender.A2.append=true
 log4j.appender.A2.MaxFileSize=1MB
 log4j.appender.A2.MaxBackupIndex=10
