@@ -3,6 +3,9 @@ Changes in OBO-Edit2b57:
 Bug Fixes:
 
 - [ geneontology-Bugs-2706065 ] b56 - OE not starting on Windows
+- [ 2051721 ] OBOMerge losing replaced_by tags. 
+N.B. This bug is very difficult to fully test, so I have asked the 
+users to keep a close eye on these tags for the next few merges. 
 
 Bugs pending:
 - Itemized undo
